[PIE-3737]: Rename LockStep to QueueStep